fix pass-block z-index

--- a/playground/styles.css
+++ b/playground/styles.css
@@ -30,7 +30,7 @@ body .laji-form {
 }
 
 .laji-form .pass-block {
-	z-index: 2 !important;
+	z-index: 1052 !important;
 }
 
 .laji-form .pass-block, .laji-form .pass-block .panel {
